--- a/package.json
+++ b/package.json
@@ -14,61 +14,62 @@
   "dependencies": {
     "@100mslive/react-icons": "^0.0.6",
     "@100mslive/react-sdk": "^0.0.6",
-    "@agility/content-fetch": "1.1.1",
-    "@agility/content-sync": "1.0.3",
+    "@agility/content-fetch": "1.1.5",
+    "@agility/content-sync": "1.1.3",
     "@hcaptcha/react-hcaptcha": "^0.3.7",
     "@radix-ui/react-dialog": "0.1.5",
     "@radix-ui/react-dropdown-menu": "0.1.4",
     "@radix-ui/react-tabs": "0.1.4",
-    "@reach/skip-nav": "0.12.1",
+    "@reach/skip-nav": "0.18.0",
     "@supabase/supabase-js": "^1.35.4",
     "chrome-aws-lambda": "10.1.0",
-    "classnames": "2.2.6",
-    "cookie": "0.4.1",
-    "date-fns": "2.16.1",
+    "classnames": "2.3.2",
+    "cookie": "0.5.0",
+    "date-fns": "2.29.3",
     "htmlescape": "1.1.1",
-    "intersection-observer": "0.12.0",
+    "intersection-observer": "0.12.2",
     "ioredis": "4.19.4",
     "ms": "2.1.3",
-    "next": "^12.0.10",
+    "next": "^12.3.2",
     "nprogress": "0.2.0",
     "puppeteer-core": "5.5.0",
-    "react": "^18.0.0-rc.0",
-    "react-aria": "3.2.0",
-    "react-dom": "^18.0.0-rc.0",
-    "react-hot-toast": "^2.2.0",
+    "react": "^18.0.2",
+    "react-aria": "3.21.0",
+    "react-dom": "^18.0.2",
+    "react-google-forms-hooks": "^1.2.4",
+    "react-hot-toast": "^2.4.0",
     "smoothscroll-polyfill": "0.4.4",
     "swr": "0.3.9",
-    "validator": "13.5.2",
-    "vanilla-tilt": "1.7.0"
+    "validator": "13.7.0",
+    "vanilla-tilt": "1.7.3"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.0.0",
-    "@types/classnames": "2.2.11",
-    "@types/cookie": "0.4.0",
+    "@netlify/plugin-nextjs": "^4.29.2",
+    "@types/classnames": "2.3.1",
+    "@types/cookie": "0.5.1",
     "@types/htmlescape": "1.1.1",
     "@types/ioredis": "4.17.9",
     "@types/ms": "0.7.31",
     "@types/node": "12.19.8",
     "@types/nprogress": "0.2.0",
-    "@types/puppeteer-core": "2.0.0",
-    "@types/reach__skip-nav": "0.1.1",
-    "@types/react": "17.0.0",
+    "@types/puppeteer-core": "5.4.0",
+    "@types/reach__skip-nav": "0.1.3",
+    "@types/react": "^18.0.1",
     "@types/smoothscroll-polyfill": "0.3.1",
-    "@types/validator": "13.1.1",
-    "@typescript-eslint/eslint-plugin": "4.10.0",
-    "@typescript-eslint/parser": "4.10.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "7.15.0",
-    "eslint-config-prettier": "7.0.0",
-    "eslint-plugin-react": "7.21.5",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "postcss": "^8.4.4",
+    "@types/validator": "13.7.10",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.28.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-react": "7.31.11",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "postcss": "^8.4.19",
     "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-hover-media-feature": "1.0.0",
-    "postcss-preset-env": "6.7.0",
-    "prettier": "2.2.1",
-    "tailwindcss": "^3.0.1",
-    "typescript": "4.3.2"
+    "postcss-hover-media-feature": "1.0.2",
+    "postcss-preset-env": "7.8.3",
+    "prettier": "2.8.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.3"
   }
 }
