--- a/.env.local.example
+++ b/.env.local.example
@@ -53,3 +53,7 @@ STRAPI_API_URL=
 NEXT_PUBLIC_HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
 HCAPTCHA_SECRET_KEY=0x0000000000000000000000000000000000000000
 
+SMTP_HOST=
+SMTP_PORT=
+SMTP_LOGIN=
+SMTP_PASSWORD=
