--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ioredis": "4.19.4",
     "ms": "2.1.3",
     "next": "^12.3.2",
+    "nodemailer": "^6.8.0",
     "nprogress": "0.2.0",
     "puppeteer-core": "5.5.0",
     "react": "^18.0.2",
@@ -52,6 +53,7 @@
     "@types/ioredis": "4.17.9",
     "@types/ms": "0.7.31",
     "@types/node": "12.19.8",
+    "@types/nodemailer": "^6.4.6",
     "@types/nprogress": "0.2.0",
     "@types/puppeteer-core": "5.4.0",
     "@types/reach__skip-nav": "0.1.3",
