--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "next",
-    "start": "next start",
+    "start": "yarn generate && next start",
     "build": "next build",
     "generate": "node -e 'require(\"react-google-forms-hooks\").googleFormsToJson(\"https://docs.google.com/forms/d/e/1FAIpQLSdma-rdJELwPGL-Iw7x28h3nZbvCaiFAABpz9B_17kuemSbWg/viewform\").then((data) =>  console.log(JSON.stringify(data)))' > GoogleForm.json",
     "license": "addlicense -l apache -c 'Vercel Inc.' components/**/* lib/**/* pages/**/* styles/**/* *.ts *.js"
@@ -46,7 +46,7 @@
     "vanilla-tilt": "1.7.3"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.29.2",
+    "@netlify/plugin-nextjs": "^4.29.3",
     "@types/classnames": "2.3.1",
     "@types/cookie": "0.5.1",
     "@types/htmlescape": "1.1.1",
