--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "dev": "next",
-    "start": "yarn generate && next start",
-    "build": "next build",
+    "start": "next start",
+    "build": "yarn generate && next build",
     "generate": "node -e 'require(\"react-google-forms-hooks\").googleFormsToJson(\"https://docs.google.com/forms/d/e/1FAIpQLSdma-rdJELwPGL-Iw7x28h3nZbvCaiFAABpz9B_17kuemSbWg/viewform\").then((data) =>  console.log(JSON.stringify(data)))' > GoogleForm.json",
     "license": "addlicense -l apache -c 'Vercel Inc.' components/**/* lib/**/* pages/**/* styles/**/* *.ts *.js"
   },
